flask-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: flask-deployment
  labels:
    type: restapi

spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      name: flask-app-template
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app-container
          image: jacobot1/flask_image:1.7
          ports:
            - containerPort: 6000
