flask-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: flask-service

spec:
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 6000
  selector:
    app: flask-app
